--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "bugs": {
     "url": "https://github.com/pdxnode/pdxnode.org/issues"
   },
-  "main": "index.js",
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
@@ -20,12 +19,17 @@
   "devDependencies": {
     "standard": "^10.0.3"
   },
+  "engines": {
+    "node": "8",
+    "npm": "5"
+  },
   "homepage": "https://github.com/pdxnode/pdxnode.org",
   "keywords": [
     "pdxnode",
     "website"
   ],
   "license": "MIT",
+  "main": "index.js",
   "private": true,
   "repository": {
     "type": "git",
