--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "morgan": "~1.8.1",
+    "npm-list-author-packages": "^2.0.1",
     "npm-run-all": "^4.1.1",
     "serve-favicon": "~2.4.2"
   },
