--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "pdxnode.org",
-  "description": "PDXNode Website",
+  "name": "module-downloads",
+  "description": "Dashboard for viewing module downloads from the NPM registry.",
   "version": "1.0.0",
   "author": "Nate Goldman <ungoldman@gmail.com> (https://ungoldman.com)",
-  "bugs": {
-    "url": "https://github.com/pdxnode/pdxnode.org/issues"
-  },
   "dependencies": {
     "browserify-middleware": "^7.1.0",
     "choo": "^6.0.0",
-    "choo-devtools": "^1.3.1",
-    "choo-log": "^7.2.1",
+    "choo-devtools": "^2.3.3",
     "debug": "^3.0.1",
     "express": "^4.15.4",
     "gravatar-url": "^2.0.0",
     "hyperstream": "^1.2.2",
     "morgan": "^1.8.2",
     "npm-list-author-packages": "^2.0.1",
-    "opn": "^5.1.0",
-    "serve-favicon": "^2.4.3"
+    "opn": "^5.1.0"
   },
   "devDependencies": {
     "standard": "^10.0.3"
@@ -27,7 +22,6 @@
     "node": "8",
     "npm": "5"
   },
-  "homepage": "https://github.com/pdxnode/pdxnode.org",
   "keywords": [
     "pdxnode",
     "website"
@@ -35,10 +29,6 @@
   "license": "MIT",
   "main": "index.js",
   "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pdxnode/pdxnode.org.git"
-  },
   "scripts": {
     "start": "node .",
     "test": "standard"
